dataset1235/2025-2/1153765216/users/230013788/executions/2814675586_1559799913.log
== RUN (2025-08-26 18:06:07)
-- CODE: 
numero = input()
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:42)
-- CODE: 
numero = input(120 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:35:38)
-- CODE: 
numero = input("2 ** 2: "))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:35:42)
-- CODE: 
numero = input("2 ** 2: ")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:11:21)
-- CODE: 
numero = int(input())
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
4
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
1000000
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
100
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
225
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
14400
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:13:43)
-- CODE: 
numero = input(2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:35:38)
-- CODE: 
numero = input("2 ** 2: "))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input("2 ** 2: "))
                              ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:11:10)
-- CODE: 
numero = int(input()
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:14:44)
-- CODE: 
numero = input(2)
quadrado = 23 ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
2529
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
2529
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
2529
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
2529
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
2529
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
2529
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:06:09)
-- CODE: 
numero = input(2 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:14:40)
-- CODE: 
numero = input(2)
quadrado = 23 ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
2529
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
2529
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
2529
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
2529
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
2529
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
2529
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:28:03)
-- CODE: 
numero = input(2**)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:11:09)
-- CODE: 
numero = int(input()
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input()
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:28:10)
-- CODE: 
numero = input(2**))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:13:41)
-- CODE: 
numero = input(2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:09:48)
-- CODE: 
numero = input(2**2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:36:02)
-- CODE: 
numero = input(2 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:36:43)
-- CODE: 
numero = input(120 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:11:02)
-- CODE: 
numero = int(input(2**2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:35:26)
-- CODE: 
numero = input(2**2))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:14:43)
-- CODE: 
numero = input(2)
quadrado = 23 ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
2529
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
2529
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
2529
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
2529
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
2529
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
2529
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:06:20)
-- CODE: 
numero = input(4)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:26)
-- CODE: 
numero = input(2 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:08:14)
-- CODE: 
numero = input(2**2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:28:11)
-- CODE: 
numero = input(2**))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input(2**))
                       ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:11:03)
-- CODE: 
numero = int(input(2**2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = int(input(2**2)
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:06:22)
-- CODE: 
numero = input(4)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:14:39)
-- CODE: 
numero = input(2)
quadrado = 23 ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
2529
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
2529
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
2529
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
2529
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
2529
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
2529
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:35:43)
-- CODE: 
numero = input("2 ** 2: ")
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:06:10)
-- CODE: 
numero = input(2 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:09:46)
-- CODE: 
numero = input(2**2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:52)
-- CODE: 
numero = input(2 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:35:58)
-- CODE: 
numero = input(2 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:08:15)
-- CODE: 
numero = input(2**2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:28:04)
-- CODE: 
numero = input(2**)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input(2**)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:14:41)
-- CODE: 
numero = input(2)
quadrado = 23 ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
2529
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
2529
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
2529
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
2529
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
2529
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
2529
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:14:04)
-- CODE: 
numero = input()
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:36:16)
-- CODE: 
numero = input(2 ** 2)
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    quadrado = numero ** 2
               ~~~~~~~^^~~
TypeError: unsupported operand type(s) for ** or pow(): 'str' and 'int'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:14:44)
-- CODE: 
numero = input(2)
quadrado = 23 ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
---- user output:
2529
-- TEST CASE 2:
---- input:
0
---- correct output:
0
---- user output:
2529
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
---- user output:
2529
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
---- user output:
2529
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
---- user output:
2529
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
---- user output:
2529
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:35:25)
-- CODE: 
numero = input(2**2))
quadrado = numero ** 2
print(quadrado)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
2
---- correct output:
4
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
0
---- correct output:
0
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
1000
---- correct output:
1000000
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
-10
---- correct output:
100
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
-15
---- correct output:
225
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
120
---- correct output:
14400
-- ERROR:
File "XXXX", line 1
    numero = input(2**2))
                        ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
